// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb render testing Test Breadcrumb (Snapshot) 1 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar breadcrumb verticalCenterContent dropShadow"
        id="breadcrumb1"
        style="flex-direction: row;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="root"
        >
          root
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ❯
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="folder"
        >
          folder
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ❯
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="subfolder"
        >
          subfolder
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ❯
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="..."
          class="msg button picker"
        >
          ...
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="msg container fixedScrollbar breadcrumb verticalCenterContent dropShadow"
      id="breadcrumb1"
      style="flex-direction: row;"
    >
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="root"
      >
        root
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ❯
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="folder"
      >
        folder
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ❯
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="subfolder"
      >
        subfolder
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ❯
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        caption="..."
        class="msg button picker"
      >
        ...
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb render testing Test Breadcrumb (Snapshot) 2 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar breadcrumb verticalCenterContent"
        id="breadcrumb2"
        style="flex-direction: row;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="root"
        >
          root
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ☞
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="folder"
        >
          folder
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ☞
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="subfolder"
        >
          subfolder
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ☞
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button breadcrumbItem"
          id="subfolder2"
        >
          subfolder2
        </button>
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label separator"
          data-tooltip="expand"
        >
          ☞
        </label>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="..."
          class="msg button picker"
        >
          ...
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="msg container fixedScrollbar breadcrumb verticalCenterContent"
      id="breadcrumb2"
      style="flex-direction: row;"
    >
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="root"
      >
        root
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ☞
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="folder"
      >
        folder
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ☞
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="subfolder"
      >
        subfolder
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ☞
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button breadcrumbItem"
        id="subfolder2"
      >
        subfolder2
      </button>
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label separator"
        data-tooltip="expand"
      >
        ☞
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        caption="..."
        class="msg button picker"
      >
        ...
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb render testing Test Breadcrumb (Snapshot) 3 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar breadcrumb verticalCenterContent"
        id="breadcrumb3"
        style="flex-direction: row;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button"
          style="background-color: white; color: white;"
        >
          <span
            __source="[object Object]"
            style="color: rgb(0, 117, 143);"
          >
            My
          </span>
          <span
            __source="[object Object]"
            style="color: rgb(242, 145, 17);"
          >
            SQL
          </span>
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="msg button"
          style="background-color: rgb(80, 80, 80);"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data-tooltip="expand"
          >
            localhost:3307
          </label>
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="mysql"
          class="msg button"
          style="background-color: gray;"
        >
          mysql
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="SQL"
          class="msg button"
          style="background-color: darkorange; color: white;"
        >
          SQL
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="msg container fixedScrollbar breadcrumb verticalCenterContent"
      id="breadcrumb3"
      style="flex-direction: row;"
    >
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button"
        style="background-color: white; color: white;"
      >
        <span
          __source="[object Object]"
          style="color: rgb(0, 117, 143);"
        >
          My
        </span>
        <span
          __source="[object Object]"
          style="color: rgb(242, 145, 17);"
        >
          SQL
        </span>
      </button>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button"
        style="background-color: rgb(80, 80, 80);"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          localhost:3307
        </label>
      </button>
      <button
        __self="[object Object]"
        __source="[object Object]"
        caption="mysql"
        class="msg button"
        style="background-color: gray;"
      >
        mysql
      </button>
      <button
        __self="[object Object]"
        __source="[object Object]"
        caption="SQL"
        class="msg button"
        style="background-color: darkorange; color: white;"
      >
        SQL
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
